added comments and doc string for the class postional encoding

--- a/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
+++ b/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
@@ -606,6 +606,7 @@
       },
       "outputs": [],
       "source": [
+        "# Count the number of GPU devices available\n",
         "def get_device(i=0):\n",
         "    if torch.cuda.device_count() >= i+1:\n",
         "        return torch.device(f'cuda:{i}')\n",
@@ -634,33 +635,15 @@
         }
       ],
       "source": [
+        "# Checks if there is GPU available to be used\n",
         "print(f\"Is CUDA available? {torch.cuda.is_available()}\")"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ufB48Gm0QwMH",
-        "outputId": "0e66c55b-4a87-4999-ed11-6ebf99b3b692"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "device(type='cuda', index=0)"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "device"
+        "## Data Preparation"
       ]
     },
     {
@@ -671,6 +654,7 @@
       },
       "outputs": [],
       "source": [
+        "# Load the dataset as a Pandas dataframe and store it in df\n",
         "df = pd.read_csv('Reviews.csv', nrows = 10000)"
       ]
     },
@@ -682,6 +666,7 @@
       },
       "outputs": [],
       "source": [
+        "# Include only Text data with its Summary\n",
         "data = df[['Text', 'Summary']]"
       ]
     },
@@ -693,7 +678,8 @@
       },
       "outputs": [],
       "source": [
-        "data.drop_duplicates(subset=['Text'], inplace=True) # Drop duplicate rows"
+        "# Drop duplicate rows\n",
+        "data.drop_duplicates(subset=['Text'], inplace=True) "
       ]
     },
     {
@@ -1001,6 +987,7 @@
         }
       ],
       "source": [
+        "# Read 1st five rows in data\n",
         "data.head()"
       ]
     },
@@ -1012,6 +999,8 @@
       },
       "outputs": [],
       "source": [
+        "# This dictionary maps informal contractions and abbreviations to their formal equivalents.\n",
+        "# It can be used to normalize text data by replacing informal language with its formal counterparts.\n",
         "word_mapping = {\"ain't\": \"is not\",\"aint\": \"is not\", \"aren't\": \"are not\",\"arent\": \"are not\",\n",
         "                \"can't\": \"cannot\",\"cant\": \"cannot\", \"'cause\": \"because\", \"cause\": \"because\",\n",
         "                \"could've\": \"could have\", \"couldn't\": \"could not\",\"didn't\": \"did not\",\n",
@@ -1118,7 +1107,7 @@
       },
       "outputs": [],
       "source": [
-        "# pading function\n",
+        "# Pading function\n",
         "def truncate_pad(line, num_steps, padding_token):\n",
         "    if len(line) > num_steps:\n",
         "        return line[:num_steps]  # Truncate\n",
@@ -1133,7 +1122,7 @@
       },
       "outputs": [],
       "source": [
-        "# the vocabulary class\n",
+        "# Vocabulary class\n",
         "class Vocab:\n",
         "    def __init__(self, tokens=[], min_freq=0, reserved_tokens=[]):\n",
         "        # Flatten a 2D list if needed\n",
@@ -1170,7 +1159,7 @@
       },
       "outputs": [],
       "source": [
-        "# fn to add eos and padding and also determine valid length of each data sample\n",
+        "# Fun to add eos and padding and also determine valid length of each data sample\n",
         "def build_array_sum(lines, vocab, num_steps):\n",
         "    lines = [vocab[l] for l in lines]\n",
         "    lines = [l + [vocab['<eos>']] for l in lines]\n",
@@ -1187,7 +1176,7 @@
       },
       "outputs": [],
       "source": [
-        "# create the tensor dataset object\n",
+        "# Create the tensor dataset object\n",
         "def load_array(data_arrays, batch_size, is_train=True):\n",
         "    dataset = torch.utils.data.TensorDataset(*data_arrays)\n",
         "    return torch.utils.data.DataLoader(dataset, batch_size, shuffle=is_train)"
@@ -1277,8 +1266,8 @@
       },
       "outputs": [],
       "source": [
-        "# the irrelevant tokens are given a very small negative value which gets\n",
-        "# ignored in the subsequent calculations\n",
+        "# The irrelevant tokens are given a very small negative value which gets\n",
+        "# Ignored in the subsequent calculations\n",
         "def masked_softmax(X, valid_lens):\n",
         "    if valid_lens is None:\n",
         "        return nn.functional.softmax(X, dim=-1)\n",
@@ -1320,7 +1309,14 @@
       },
       "outputs": [],
       "source": [
+        "# This line defines a class named `PositionWiseFFN` that inherits from `nn.Module`.\n",
         "class PositionWiseFFN(nn.Module):\n",
+        "    \"\"\"\n",
+        "    Implements a position-wise feed-forward network (FFN) layer commonly used in Transformer architectures.\n",
+        "    It takes an input sequence, projects it to a higher dimensional space, applies a non-linear activation (ReLU),\n",
+        "    and then projects it back to the desired output dimension. This allows the network\n",
+        "    to learn complex non-linear relationships between elements in the sequence.\n",
+        "    \"\"\"\n",
         "    def __init__(self, ffn_num_input, ffn_num_hiddens, ffn_num_output, **kwargs):\n",
         "        super(PositionWiseFFN, self).__init__(**kwargs)\n",
         "        self.dense1 = nn.Linear(ffn_num_input, ffn_num_hiddens)\n",
@@ -1339,17 +1335,48 @@
       "outputs": [],
       "source": [
         "class PositionalEncoding(nn.Module):\n",
-        "    def __init__(self, num_hiddens, dropout, max_len=1000):\n",
-        "        super(PositionalEncoding, self).__init__()\n",
-        "        self.dropout = nn.Dropout(dropout)\n",
-        "        self.P = torch.zeros((1, max_len, num_hiddens))\n",
-        "        X = torch.arange(max_len, dtype=torch.float32).reshape(-1, 1)/torch.pow(10000,torch.arange(0, num_hiddens,2, dtype=torch.float32)/num_hiddens)\n",
-        "        self.P[:,:, 0::2] = torch.sin(X)\n",
-        "        self.P[:, :, 1::2] = torch.cos(X)\n",
+        "  \"\"\"Implements positional encoding layer for Transformer models.\n",
         "\n",
-        "    def forward(self, X):\n",
-        "        X = X + self.P[:, :X.shape[1], :].to(X.device)\n",
-        "        return self.dropout(X)"
+        "  This layer adds positional information to an input embedding vector, \n",
+        "  allowing the model to learn the relative position of words in a sequence.\n",
+        "\n",
+        "  Args:\n",
+        "      num_hiddens (int): The number of features in the embedding vector.\n",
+        "      dropout (float): Dropout rate to apply to the positional encoding.\n",
+        "      max_len (int, optional): The maximum sequence length to support. Defaults to 1000.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  def __init__(self, num_hiddens, dropout, max_len=1000):\n",
+        "    \"\"\"\n",
+        "    Initializes the positional encoding layer.\n",
+        "\n",
+        "    Args:\n",
+        "        num_hiddens (int): Same as in the docstring.\n",
+        "        dropout (float): Same as in the docstring.\n",
+        "        max_len (int): Same as in the docstring.\n",
+        "    \"\"\"\n",
+        "    super(PositionalEncoding, self).__init__()\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "    self.P = torch.zeros((1, max_len, num_hiddens))  # Positional encoding matrix\n",
+        "\n",
+        "    # Create positional encoding based on sine and cosine functions\n",
+        "    X = torch.arange(max_len, dtype=torch.float32).reshape(-1, 1) / torch.pow(10000, torch.arange(0, num_hiddens, 2, dtype=torch.float32) / num_hiddens)\n",
+        "    self.P[:, :, 0::2] = torch.sin(X)  # Even dimension: sin\n",
+        "    self.P[:, :, 1::2] = torch.cos(X)  # Odd dimension: cos\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    \"\"\"\n",
+        "    Applies positional encoding to the input tensor.\n",
+        "\n",
+        "    Args:\n",
+        "        X (torch.Tensor): Input tensor containing word embeddings.\n",
+        "\n",
+        "    Returns:\n",
+        "        torch.Tensor: The input tensor with positional encoding added.\n",
+        "    \"\"\"\n",
+        "    # Add positional encoding to input (relevant portion only)\n",
+        "    X = X + self.P[:, :X.shape[1], :].to(X.device)\n",
+        "    return self.dropout(X)\n"
       ]
     },
     {
