added comments to the codefile

--- a/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
+++ b/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
@@ -1491,7 +1491,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# class for the block structure within\n",
+        "# Class for the block structure within\n",
         "class EncoderBlock(nn.Module):\n",
         "    \"\"\"\n",
         "    This class defines the block structure within the encoder part of a transformer model.\n",
@@ -3121,6 +3121,13 @@
         }
       ],
       "source": [
+        "# Train a sequence-to-sequence model\n",
+        "#   net: The sequence-to-sequence model to train\n",
+        "#   data_iter: An iterator providing training data batches\n",
+        "#   lr: The learning rate to use during training\n",
+        "#   num_epochs: The number of epochs to train for\n",
+        "#   tgt_vocab: The target vocabulary object\n",
+        "#   device: The device (CPU or GPU) to use for training\n",
         "train_seq2seq(net, data_iter, lr, num_epochs, tgt_vocab, device)"
       ]
     },
