updating functions with comments

--- a/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
+++ b/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
@@ -196,10 +196,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Found GPU at: /device:GPU:0\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'tensorflow'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Utilizing GPU Processors on Colab\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Gets the name of the GPU device if available\u001b[39;00m\n\u001b[0;32m      4\u001b[0m device_name \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m.\u001b[39mgpu_device_name()\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
           ]
         }
       ],
@@ -2787,6 +2791,9 @@
         }
       ],
       "source": [
+        "# Apply weight initialization function to all modules in the network\n",
+        "#   net: The neural network module\n",
+        "#   initialize_weights: A function that initializes the weights of each module\n",
         "net.apply(initialize_weights)"
       ]
     },
@@ -2798,7 +2805,9 @@
       },
       "outputs": [],
       "source": [
+        "# lr: The learning rate to use during training\n",
         "lr = 0.005\n",
+        "# num_epochs: The number of epochs to train for\n",
         "num_epochs = 250"
       ]
     },
@@ -2822,6 +2831,7 @@
         }
       ],
       "source": [
+        "# Check id GPU is utilized\n",
         "print(torch.cuda.is_available())"
       ]
     },
@@ -2848,6 +2858,7 @@
         }
       ],
       "source": [
+        "# Check available GPUs available\n",
         "device"
       ]
     },
@@ -3470,7 +3481,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
