update evaluation metrics

--- a/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
+++ b/Text_Summarization_with_Pytorch_Transformer_Model.ipynb
@@ -3238,13 +3238,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 91,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZkQZ9xoWNCPg",
-        "outputId": "d4d646f1-3128-4c9e-dd5b-355fb6a8bff9"
+        "outputId": "cdfd96f3-5f0e-4234-e4b1-e731705b424b"
       },
       "outputs": [
         {
@@ -3254,52 +3254,52 @@
             "0. SAMPLE  : sooo happy amazon sells one grocery store neighborhood closing delicious perfect fiesta night.\n",
             "PREDICTED  : great gummi.\n",
             "ACTUAL     : amazingly delicious.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "1. SAMPLE  : running vanilla would made using vanilla beans vodka price far cheaper getting locally figured worth shot sure thinking half pound vanilla beans works something like hard picture vanilla beans would good order halves someone quarters aroma incredible couple months since originally opened pantry still smells like vanilla even though wrapped two ziploc bags vanilla fantastic never tried vanilla produced absolutely missing distinct definite difference homemade buy store favor hit add cart check glad.\n",
             "PREDICTED  : great taste.\n",
             "ACTUAL     : excellent.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "2. SAMPLE  : husband love hot chocolate auto shipment every month going change every month.\n",
             "PREDICTED  : good hot chocolate.\n",
             "ACTUAL     : love.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "3. SAMPLE  : buying coffee least years love smooth taste hint hazelnut friends enjoy coming good cup coffee.\n",
             "PREDICTED  : best coffee ever.\n",
             "ACTUAL     : great coffee.\n",
-            "Score      : 0.16666666666666666\n",
+            "BLEU score : 0.16666666666666666\n",
             "----------------------------------------------------------------------------------------------------\n",
             "4. SAMPLE  : wolfgang puck coffee chef reserve columbian decaf fantastic delicious definitely recommend product anyone wants great cup coffee.\n",
             "PREDICTED  : best coffee.\n",
             "ACTUAL     : wonderful cups.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "5. SAMPLE  : eat chips often favorites flavor texture traditional tortilla chips subtle lime flavoring makes special lime flavoring appears seasoning dusted chips seem barely flavor find looking still none quite enough tastes wish chips hint lime.\n",
             "PREDICTED  : popchips satisfy salt crunch craving.\n",
             "ACTUAL     : tasty.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "6. SAMPLE  : jelly tastes heavenly wont find anything good grocery store say ordering shortly.\n",
             "PREDICTED  : great product.\n",
             "ACTUAL     : delicious.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "7. SAMPLE  : done side side comparison chips still taste like real deal snack sized bags well regular brand grocery store work portion control reduced fat yes please subscribe save much cheaper grocery store.\n",
             "PREDICTED  : yoli.\n",
             "ACTUAL     : delicious.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "8. SAMPLE  : purchased item cheaper olive juices looking good quality olive juice martinis pretty disappointed juice strong followed instructions put ratio bottle shaker made martini ratio part vodka part olive juice way salty olive juice powering made decent dirty martini parts vodka part olive juice would recommend item.\n",
             "PREDICTED  : great alternative.\n",
             "ACTUAL     : olive juice.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n",
             "9. SAMPLE  : recommended friend saw gym seen times fatted calf napa didnt really pay attention never buy beans bag grocery store huge difference taste quality sent son aspiring chef gourmet foodie box beans bag well.\n",
             "PREDICTED  : good stuff.\n",
             "ACTUAL     : outstanding.\n",
-            "Score      : 0.0\n",
+            "BLEU score : 0.0\n",
             "----------------------------------------------------------------------------------------------------\n"
           ]
         }
@@ -3312,7 +3312,7 @@
         "    print(f\"{counter}. SAMPLE  : {s}.\")\n",
         "    print(\"PREDICTED  : {}.\".format(pred_sum), end='\\n')\n",
         "    print(\"ACTUAL     : {}.\".format(a))\n",
-        "    print(\"Score      : {}\".format(evaluation['google_bleu']))\n",
+        "    print(\"BLEU score : {}\".format(evaluation['google_bleu']))\n",
         "    #print(\"Precison   : {}.\".format(P))\n",
         "    #print(\"coverage   : {}.\".format(R))\n",
         "    #print(\"F1-score   : {}.\".format(F1))\n",
@@ -3333,7 +3333,14 @@
         "\n",
         "3. The final BLEU score is then the geometric mean of the n-gram precisions multiplied by the brevity penalty.\n",
         "\n",
-        "The BLEU score will be a number between 0 and 1, where 1 means a perfect match with the reference translation.\n",
+        "The BLEU score will be a number between 0 and 1, where 1 means a perfect match with the reference translation. like in third sample:\n",
+        "\n",
+        "```\n",
+        "3. SAMPLE  : buying coffee least years love smooth taste hint hazelnut friends enjoy coming good cup coffee.\n",
+        "PREDICTED  : best coffee ever.\n",
+        "ACTUAL     : great coffee.\n",
+        "Score      : 0.16666666666666666\n",
+        "```\n",
         "\n",
         "It's important to note that while the BLEU score is a commonly used metric, it has its limitations. For instance, it does not consider the meaning of the sentences and relies heavily on exact word matches. Therefore, a high BLEU score does not always guarantee a high-quality translation.\n",
         "\n",
